refactor_wine_quality refoctored

--- a/refactor_wine_quality.ipynb
+++ b/refactor_wine_quality.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 140,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,93 +507,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feature_quality(df,col):\n",
-    "    median =  df[col].median()\n",
-    "    print(median)\n",
-    "    print(type(median))\n",
-    "    for i, column in enumerate(df[col]):\n",
+    "def numeric_to_buckets(df,column_name):\n",
+    "    median =  df[column_name].median()\n",
+    "    for i, column in enumerate(df[column_name]):\n",
     "        if column >= median:\n",
-    "            df.loc[i, col] = 'high'\n",
+    "            df.loc[i, column_name] = 'high'\n",
     "        else:\n",
-    "            df.loc[i,col] = 'low'\n",
+    "            df.loc[i,column_name] = 'low'\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.9\n",
-      "<class 'numpy.float64'>\n",
       "fixed_acidity\n",
       "high    5.726061\n",
       "low     5.540052\n",
       "Name: quality, dtype: float64\n",
-      "0.52\n",
-      "<class 'numpy.float64'>\n",
       "volatile_acidity\n",
       "high    5.392157\n",
       "low     5.890166\n",
       "Name: quality, dtype: float64\n",
-      "0.26\n",
-      "<class 'numpy.float64'>\n",
       "citric_acid\n",
       "high    5.822360\n",
       "low     5.447103\n",
       "Name: quality, dtype: float64\n",
-      "2.2\n",
-      "<class 'numpy.float64'>\n",
       "residual_sugar\n",
       "high    5.665880\n",
       "low     5.602394\n",
       "Name: quality, dtype: float64\n",
-      "0.079\n",
-      "<class 'numpy.float64'>\n",
       "chlorides\n",
       "high    5.507194\n",
       "low     5.776471\n",
       "Name: quality, dtype: float64\n",
-      "14.0\n",
-      "<class 'numpy.float64'>\n",
       "free_sulfur_dioxide\n",
       "high    5.595268\n",
       "low     5.677136\n",
       "Name: quality, dtype: float64\n",
-      "38.0\n",
-      "<class 'numpy.float64'>\n",
       "total_sulfur_dioxide\n",
       "high    5.522981\n",
       "low     5.750630\n",
       "Name: quality, dtype: float64\n",
-      "0.99675\n",
-      "<class 'numpy.float64'>\n",
       "density\n",
       "high    5.540574\n",
       "low     5.731830\n",
       "Name: quality, dtype: float64\n",
-      "3.31\n",
-      "<class 'numpy.float64'>\n",
       "pH\n",
       "high    5.598039\n",
       "low     5.675607\n",
       "Name: quality, dtype: float64\n",
-      "0.62\n",
-      "<class 'numpy.float64'>\n",
       "sulphates\n",
       "high    5.898917\n",
       "low     5.351562\n",
       "Name: quality, dtype: float64\n",
-      "10.2\n",
-      "<class 'numpy.float64'>\n",
       "alcohol\n",
       "high    5.958904\n",
       "low     5.310302\n",
@@ -603,7 +579,7 @@
    ],
    "source": [
     "for feature in df.columns[:-1]:\n",
-    "    df = feature_quality(df,feature)\n",
+    "    df = numeric_to_buckets(df,feature)\n",
     "    print(df.groupby(feature).quality.mean())"
    ]
   }
