4_data_wrangling done

--- a/mnist_mlp.ipynb.ipynb
+++ b/mnist_mlp.ipynb.ipynb
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,42 @@
       "\n",
       "Epoch 00001: val_loss improved from inf to 0.11300, saving model to mnist.model.best.hdf5\n",
       "Epoch 2/10\n",
-      "32640/48000 [===================>..........] - ETA: 1s - loss: 0.1175 - accuracy: 0.9666"
+      "48000/48000 [==============================] - 7s 137us/step - loss: 0.1135 - accuracy: 0.9676 - val_loss: 0.1051 - val_accuracy: 0.9707\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.11300 to 0.10508, saving model to mnist.model.best.hdf5\n",
+      "Epoch 3/10\n",
+      "48000/48000 [==============================] - 5s 110us/step - loss: 0.0864 - accuracy: 0.9756 - val_loss: 0.1121 - val_accuracy: 0.9724\n",
+      "\n",
+      "Epoch 00003: val_loss did not improve from 0.10508\n",
+      "Epoch 4/10\n",
+      "48000/48000 [==============================] - 4s 93us/step - loss: 0.0729 - accuracy: 0.9795 - val_loss: 0.1148 - val_accuracy: 0.9740\n",
+      "\n",
+      "Epoch 00004: val_loss did not improve from 0.10508\n",
+      "Epoch 5/10\n",
+      "48000/48000 [==============================] - 5s 101us/step - loss: 0.0645 - accuracy: 0.9821 - val_loss: 0.1105 - val_accuracy: 0.9771\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve from 0.10508\n",
+      "Epoch 6/10\n",
+      "48000/48000 [==============================] - 5s 104us/step - loss: 0.0570 - accuracy: 0.9843 - val_loss: 0.1645 - val_accuracy: 0.9657\n",
+      "\n",
+      "Epoch 00006: val_loss did not improve from 0.10508\n",
+      "Epoch 7/10\n",
+      "48000/48000 [==============================] - 5s 99us/step - loss: 0.0538 - accuracy: 0.9854 - val_loss: 0.1312 - val_accuracy: 0.9778\n",
+      "\n",
+      "Epoch 00007: val_loss did not improve from 0.10508\n",
+      "Epoch 8/10\n",
+      "48000/48000 [==============================] - 5s 106us/step - loss: 0.0469 - accuracy: 0.9879 - val_loss: 0.1473 - val_accuracy: 0.9784\n",
+      "\n",
+      "Epoch 00008: val_loss did not improve from 0.10508\n",
+      "Epoch 9/10\n",
+      "48000/48000 [==============================] - 5s 104us/step - loss: 0.0472 - accuracy: 0.9881 - val_loss: 0.1340 - val_accuracy: 0.9803\n",
+      "\n",
+      "Epoch 00009: val_loss did not improve from 0.10508\n",
+      "Epoch 10/10\n",
+      "48000/48000 [==============================] - 5s 101us/step - loss: 0.0459 - accuracy: 0.9882 - val_loss: 0.1538 - val_accuracy: 0.9799\n",
+      "\n",
+      "Epoch 00010: val_loss did not improve from 0.10508\n",
+      "Test accuracy: 97.1500%\n"
      ]
     }
    ],
