--- a/tokenization_practice.ipynb
+++ b/tokenization_practice.ipynb
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import statements\n",
-    "import re\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize"
+    "\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.tokenize import sent_tokenize"
    ]
   },
   {
@@ -79,16 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text = re.sub(r\"[^a-zA-Z0-9]\", \" \", text.lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -107,247 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nltk.download('stopwords')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['dr', 'smith', 'graduated', 'university', 'washington', 'later', 'started', 'analytics', 'firm', 'called', 'lux', 'catered', 'enterprise', 'customers']\n"
+      "['dr  smith graduated from the university of washington  he later started an analytics firm called lux  which catered to enterprise customers']\n"
      ]
     }
    ],
    "source": [
-    "# Split text into sentences\n",
-    "word = [w for w in word if w not in stopwords.words(\"english\")]\n",
+    "word = sent_tokenize(text)\n",
     "print(word)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['i',\n",
-       " 'me',\n",
-       " 'my',\n",
-       " 'myself',\n",
-       " 'we',\n",
-       " 'our',\n",
-       " 'ours',\n",
-       " 'ourselves',\n",
-       " 'you',\n",
-       " \"you're\",\n",
-       " \"you've\",\n",
-       " \"you'll\",\n",
-       " \"you'd\",\n",
-       " 'your',\n",
-       " 'yours',\n",
-       " 'yourself',\n",
-       " 'yourselves',\n",
-       " 'he',\n",
-       " 'him',\n",
-       " 'his',\n",
-       " 'himself',\n",
-       " 'she',\n",
-       " \"she's\",\n",
-       " 'her',\n",
-       " 'hers',\n",
-       " 'herself',\n",
-       " 'it',\n",
-       " \"it's\",\n",
-       " 'its',\n",
-       " 'itself',\n",
-       " 'they',\n",
-       " 'them',\n",
-       " 'their',\n",
-       " 'theirs',\n",
-       " 'themselves',\n",
-       " 'what',\n",
-       " 'which',\n",
-       " 'who',\n",
-       " 'whom',\n",
-       " 'this',\n",
-       " 'that',\n",
-       " \"that'll\",\n",
-       " 'these',\n",
-       " 'those',\n",
-       " 'am',\n",
-       " 'is',\n",
-       " 'are',\n",
-       " 'was',\n",
-       " 'were',\n",
-       " 'be',\n",
-       " 'been',\n",
-       " 'being',\n",
-       " 'have',\n",
-       " 'has',\n",
-       " 'had',\n",
-       " 'having',\n",
-       " 'do',\n",
-       " 'does',\n",
-       " 'did',\n",
-       " 'doing',\n",
-       " 'a',\n",
-       " 'an',\n",
-       " 'the',\n",
-       " 'and',\n",
-       " 'but',\n",
-       " 'if',\n",
-       " 'or',\n",
-       " 'because',\n",
-       " 'as',\n",
-       " 'until',\n",
-       " 'while',\n",
-       " 'of',\n",
-       " 'at',\n",
-       " 'by',\n",
-       " 'for',\n",
-       " 'with',\n",
-       " 'about',\n",
-       " 'against',\n",
-       " 'between',\n",
-       " 'into',\n",
-       " 'through',\n",
-       " 'during',\n",
-       " 'before',\n",
-       " 'after',\n",
-       " 'above',\n",
-       " 'below',\n",
-       " 'to',\n",
-       " 'from',\n",
-       " 'up',\n",
-       " 'down',\n",
-       " 'in',\n",
-       " 'out',\n",
-       " 'on',\n",
-       " 'off',\n",
-       " 'over',\n",
-       " 'under',\n",
-       " 'again',\n",
-       " 'further',\n",
-       " 'then',\n",
-       " 'once',\n",
-       " 'here',\n",
-       " 'there',\n",
-       " 'when',\n",
-       " 'where',\n",
-       " 'why',\n",
-       " 'how',\n",
-       " 'all',\n",
-       " 'any',\n",
-       " 'both',\n",
-       " 'each',\n",
-       " 'few',\n",
-       " 'more',\n",
-       " 'most',\n",
-       " 'other',\n",
-       " 'some',\n",
-       " 'such',\n",
-       " 'no',\n",
-       " 'nor',\n",
-       " 'not',\n",
-       " 'only',\n",
-       " 'own',\n",
-       " 'same',\n",
-       " 'so',\n",
-       " 'than',\n",
-       " 'too',\n",
-       " 'very',\n",
-       " 's',\n",
-       " 't',\n",
-       " 'can',\n",
-       " 'will',\n",
-       " 'just',\n",
-       " 'don',\n",
-       " \"don't\",\n",
-       " 'should',\n",
-       " \"should've\",\n",
-       " 'now',\n",
-       " 'd',\n",
-       " 'll',\n",
-       " 'm',\n",
-       " 'o',\n",
-       " 're',\n",
-       " 've',\n",
-       " 'y',\n",
-       " 'ain',\n",
-       " 'aren',\n",
-       " \"aren't\",\n",
-       " 'couldn',\n",
-       " \"couldn't\",\n",
-       " 'didn',\n",
-       " \"didn't\",\n",
-       " 'doesn',\n",
-       " \"doesn't\",\n",
-       " 'hadn',\n",
-       " \"hadn't\",\n",
-       " 'hasn',\n",
-       " \"hasn't\",\n",
-       " 'haven',\n",
-       " \"haven't\",\n",
-       " 'isn',\n",
-       " \"isn't\",\n",
-       " 'ma',\n",
-       " 'mightn',\n",
-       " \"mightn't\",\n",
-       " 'mustn',\n",
-       " \"mustn't\",\n",
-       " 'needn',\n",
-       " \"needn't\",\n",
-       " 'shan',\n",
-       " \"shan't\",\n",
-       " 'shouldn',\n",
-       " \"shouldn't\",\n",
-       " 'wasn',\n",
-       " \"wasn't\",\n",
-       " 'weren',\n",
-       " \"weren't\",\n",
-       " 'won',\n",
-       " \"won't\",\n",
-       " 'wouldn',\n",
-       " \"wouldn't\"]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stopwords.words(\"english\")"
    ]
   },
   {
